<resources>
    <string name="app_name">JCE Foodie</string>
    <array name="restaurants">
        <item>Café Frappe</item>
        <item>Café Kushi</item>
        <item>Mylari Restaurant</item>
        <item>Nescafe</item>
        <item>Yampa</item>
    </array>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We need your registered Email Id to send you password reset instructions.</string>
    <string name="about">We Adishi, Navneet, Anirudh, Sreekar and Eeshaan, here at JCE Foodie believe that good food is very important. Hence we have created this app which will assist you in finding the best food options in our very own JCE campus.\n\nYou can reach out to us at jcefoodie@gmail.com and we would love to hear from you.\n\nThank you for using our service :D\n\nAll rights reserved\n(c) 2019 JCE Foodie</string>
</resources>
